--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorBlue">#00b2ed</color>
+    <color name="colorYellow">#ffff00</color>
+    <color name="colorRed">#FF0000</color>
+    <color name="colorGray">#777777</color>
 </resources>
