--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp">
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/TextInputEditText_email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:hint="Email"/>
@@ -42,9 +43,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp">
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/TextInputEditText_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:hint="Email"/>
+            android:hint="Password"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <RelativeLayout
@@ -75,7 +77,7 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:layout_weight="1"
-            android:text="Login"/>
+            android:text="Login with Youtube"/>
     </RelativeLayout>
 
     <RelativeLayout
