--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,6 @@
         android:background="@drawable/btn_blue"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
-        android:clickable="true"
         android:weightSum="1"
         android:orientation="horizontal">
 
@@ -72,12 +71,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="#ffffff"
-            android:stateListAnimator="@null"
             android:layout_centerInParent="true"
-            android:gravity="center"
             android:layout_weight="1"
-            android:text="Login with Youtube"/>
+            android:gravity="center"
+            android:stateListAnimator="@null"
+            android:text="Login with Youtube"
+            android:textColor="#ffffff" />
     </RelativeLayout>
 
     <RelativeLayout
